2001-02-21  Michael Thome  <mthome@bbn.com>

	* DBConnectionPool
	Add control parameters and debugging support.

2001-02-15  Ray Tomlinson  <rtomlinson@bbn.com>

	* DeletionPlugIn
	Add DeletionPolicy for specifying deletion delay for classes of
	Tasks. A DeletionPolicy has three RuleParameters: a
	PredicateRuleParameter for selecting Tasks, a LongRuleParameter
	for specifying the deletion delay and a IntegerRuleParameter for
	specifying a priority. DeletionPolicies are used in descending
	order of priority until one is found that matches a task and the
	association deletion delay is added to the task end time to
	determine when the task can be deleted.

	A DefaultDeletionPolicy is used if no other DeletionPolicy is
	found.

	* PredicateRuleParameter
	New RuleParameter holding a UnaryPredicate. "In range" means the
	predicate returns true.

	* LongRuleParameter
	New RuleParameter a la IntegerRuleParameter holding longs instead
	of ints.

2001-02-15  Michael Thome  <mthome@bbn.com>

	* org.cougaar.util.DBConnectionPool
	Promoted delta's connection pool manager to util.

2001-02-13  Michael Thome  <mthome@bbn.com>

	* AssetTransferLP and ReceiveAssetTransferLP
	New relationship schedules are only sent if changes show the
	presence of a
	RelationshipSchedule.RelationshipScheduleChangeReport. If no
	schedule is received, the relationships are left alone; only
	property groups are update.

2001-01-26  Michael Thome  <mthome@bbn.com>

	* Added ComplainingLP
	Error checking LP complains about problematic LogPlan changes
	such as publishChanging an object which isn't in the plan.  Since
	LPs are applied after subscription changes, they cannot do things
	like check for redundant adds or removes - sigh.

2001-01-19  Michael Thome  <mthome@bbn.com>

	* org.cougaar.util.Parameters
	More extensive Parameter File handling.  Now reads
	"$home/.cougaarrc" *and* searches the config path for "cougaar.rc"
	in addition to searching for .alprc in the usual places.  .alprc